--- a/app/src/main/res/layout/item_main_tab_view.xml
+++ b/app/src/main/res/layout/item_main_tab_view.xml
@@ -2,16 +2,51 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ImageView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/tab_view_main_btn"
+        android:layout_width="0dp"
         android:layout_weight="1"
-        android:layout_height="match_parent" />
-    <ImageView
-        android:layout_width="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="fragment1"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/tab_view_plan_btn"
+        android:layout_width="0dp"
         android:layout_weight="1"
-        android:layout_height="match_parent" />
-    <ImageView
-        android:layout_width="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="fragment1"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/tab_view_news_btn"
+        android:layout_width="0dp"
         android:layout_weight="1"
-        android:layout_height="match_parent" />
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="fragment1"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 </LinearLayout>
