--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -11,5 +11,5 @@
         android:id="@+id/main_fragment_tabview"
         android:layout_width="match_parent"
         android:layout_gravity="bottom"
-        android:layout_height="wrap_content" />
+        android:layout_height="100dp" />
 </LinearLayout>
