--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -4,6 +4,6 @@
     android:layout_height="match_parent">
     <TextView
         android:layout_width="match_parent"
-        android:text="ddddd"
+        android:text="exercise"
         android:layout_height="match_parent" />
 </LinearLayout>
