--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".main.MainActivity">
 
     <FrameLayout
@@ -16,8 +15,10 @@
 
     <com.carpediem.randy.accountant.main.view.DrawerView
         android:layout_width="240dp"
+        android:layout_gravity="start"
+
         android:layout_height="match_parent"
         android:id="@+id/left_drawer">
 
     </com.carpediem.randy.accountant.main.view.DrawerView>
-</LinearLayout>
+</android.support.v4.widget.DrawerLayout>
